IMP-9 fix: adjusted the alignment of the title

--- a/src/components/product-cards/product-card-14/styles/card.css
+++ b/src/components/product-cards/product-card-14/styles/card.css
@@ -251,7 +251,7 @@
 }
 .pname {
    margin-top: -10px !important;
-   margin-left: -25px;
+   /* margin-left: -25px; */
 }
   
   /* iPad Pro */
